--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_STRAPI_URL=https://strapi-cms-1.onrender.com     #http://localhost:1337
+VITE_STRAPI_URL=https://strapi-cms-2-py5c.onrender.com     #http://localhost:1337
